--- a/sass/newland/_sec_bio.scss
+++ b/sass/newland/_sec_bio.scss
@@ -87,6 +87,10 @@
             img {
                 display: none;
             }
+
+            br {
+                display: block;
+            }
         }
 
         p {
